fix spacing issues

--- a/public/stylesheets/profiles/index.css
+++ b/public/stylesheets/profiles/index.css
@@ -18,7 +18,7 @@
 
 .card {
   display: flex;
-  width: 160px;
+  width: 140px;
   background-color: white;
   border: 2px solid black;
   border-radius: 10px;
